--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "FusRohDart.github.io",
+  "name": "fusrohdart.github.io",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
