--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,7 @@
 REACT_APP_FIREBASE_API_KEY = AIzaSyA_fKt2Zwjb1HAtMKJkSh8lwpvGhJP3-tA
 REACT_APP_FIREBASE_AUTH_DOMAIN = auth-dev-cryptdive.firebaseapp.com
 REACT_APP_FIREBASE_PROJECT_ID = auth-dev-cryptdive
+REACT_APP_FIREBASE_DATABASE_URL = https://auth-dev-cryptdive-default-rtdb.firebaseio.com
 REACT_APP_FIREBASE_STORAGE_BUCKET = auth-dev-cryptdive.appspot.com
 REACT_APP_FIREBASE_MESSAGING_SENDER_ID = 1020478893948
 REACT_APP_FIREBASE_APP_ID = 1:1020478893948:web:edc103313c7efe69ca3ef9
