--- a/.env.local
+++ b/.env.local
@@ -1,3 +1,4 @@
+# Firebase initialization values
 REACT_APP_FIREBASE_API_KEY = AIzaSyA_fKt2Zwjb1HAtMKJkSh8lwpvGhJP3-tA
 REACT_APP_FIREBASE_AUTH_DOMAIN = auth-dev-cryptdive.firebaseapp.com
 REACT_APP_FIREBASE_PROJECT_ID = auth-dev-cryptdive
@@ -5,3 +6,9 @@ REACT_APP_FIREBASE_DATABASE_URL = https://auth-dev-cryptdive-default-rtdb.fireba
 REACT_APP_FIREBASE_STORAGE_BUCKET = auth-dev-cryptdive.appspot.com
 REACT_APP_FIREBASE_MESSAGING_SENDER_ID = 1020478893948
 REACT_APP_FIREBASE_APP_ID = 1:1020478893948:web:edc103313c7efe69ca3ef9
+
+# MySQL initialization values
+MYSQL_DB_HOST = localhost
+MYSQL_DB_PORT = 3306
+MYSQL_DB_USER = root
+MYSQL_DB_PASS = Dovahkiin@0405
