--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "^4.5.3",
     "express": "^4.17.1",
     "firebase": "^8.1.2",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.2.5",
     "react-bootstrap": "^1.4.0",
     "react-router-dom": "^5.2.0",
