--- a/dbConfig.json
+++ b/dbConfig.json
@@ -5,5 +5,6 @@
         "user": "root",
         "password": "Dovahkiin@0405",
         "database": "main"
-    } 
+    },
+    "secret": "0d25a388-3c38-4d37-951b-7adb4276ddd9"
 }
