--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^4.5.3",
     "express": "^4.17.1",
     "firebase": "^8.1.2",
+    "joi": "^17.3.0",
     "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.2.5",
     "react-bootstrap": "^1.4.0",
